# CEP

./: .gitignore  .gitmodules  CHANGELOG.CEP.md  CHANGELOG_CEP.md  LICENSE.Components.md  LICENSE.md  README.md  RELEASE_NOTES.md  build.sbt  build.sbt.nonasic  cep_sort.f  citation.cff  common.mk  gitSubmoduleExport.csv  submoduleExport.txt  submoduleStatus  variables.mk
conda-reqs/: chipyard.yaml
customized_submodules/: CEPRocketConfigs.scala
fpga/: Makefile  program_arty100t.sh  program_arty100t.tcl  program_arty100t_flash.sh  program_arty100t_flash.tcl  program_arty100t_jtag.sh  program_arty100t_jtag.tcl  program_vc707_flash.sh  program_vc707_flash.tcl  program_vc707_jtag.sh  program_vc707_jtag.tcl  program_vcu118_flash.sh  program_vcu118_flash.tcl  program_vcu118_jtag.sh  program_vcu118_jtag.tcl
fpga/scripts/: vcu118_program.tcl
scripts/: build-setup.sh  init-submodules-no-riscv-tools-nolog.sh  manage-export.py  manage-submodules.sh  sort-blackbox.py
sims/: common-sim-flags.mk
sims/cep_cosim/: .gitignore  Makefile  Makefile.chipyard  Makefile.cosim  README.md  cadence.make  cadence_cov.ccf  cep_buildChips.make  cep_buildHW.make  cep_buildSW.make  cep_tb_temp.v  common.make  vsim_temp.do  vsim_wave_temp.do
sims/cep_cosim/bareMetalTests/: Makefile  common.make  config.v
sims/cep_cosim/bfmTests/: Makefile  common.make  config.v
sims/cep_cosim/bootrom/: Makefile  head.S  (+5 more)
sims/verilator/: Makefile
software/linux/: Makefile
software/linux/helloworld/: CMakeLists.txt  Config.in  Config.in.host  Makefile  helloworld.c  helloworld.mk
tests/: libgloss.mk
(+598 files in other folders)
